Change html title, add hover effect, add zooming and panning

--- a/src/template.html
+++ b/src/template.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>D3 Template</title>
+    <title>Choropleth Map</title>
   </head>
   <body class="container">
     <div id="root">
