--- a/src/template.html
+++ b/src/template.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <title>Choropleth Map</title>
   </head>
-  <body class="container">
+  <body>
     <div id="root">
-        <svg></svg>
     </div>
   </body>
 </html>
