Add reset zoom button with styling

--- a/src/template.html
+++ b/src/template.html
@@ -5,7 +5,9 @@
     <title>Choropleth Map</title>
   </head>
   <body>
-    <div id="root">
+    <div class="root">
+      <h1 id="title" class="title">United States Educational Attainment</h1>
+      <button class="reset-btn">Reset zoom</button>
     </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
