--- a/src/template.html
+++ b/src/template.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Choropleth Map</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <title>D3 Choropleth Map</title>
   </head>
   <body>
     <div class="root">
       <h1 id="title" class="title">United States Educational Attainment</h1>
-      <button class="reset-btn">Reset zoom</button>
+      <button class="reset-btn">Reset view</button>
     </div>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
